[tool.poetry]
name = "solstice"
version = "0.0.1"
description = "Solstice, a library for creating and scaling experiments in JAX."
authors = ["Charles Jones <cj1917@ic.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
equinox = "^0.5.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
jax = "^0.3.13"
jaxlib = "^0.3.10"
optax = "^0.1.2"
dm-haiku = "^0.0.6"
tensorflow = "^2.9.1"
tensorflow-datasets = "^4.6.0"
mkdocs-material = "^8.3.8"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
pymdown-extensions = "^9.5"
mkdocs = "^1.3.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
