[tool.poetry]
name = "solstice"
version = "0.0.1"
description = "Solstice, a library for creating and scaling experiments in JAX."
authors = ["Charles Jones <cj1917@ic.ac.uk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Charl-AI/Solstice"
documentation = "https://charl-ai.github.io/Solstice/"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
equinox = "^0.5.0"
tqdm = "^4.64.0"
typing-extensions = "^4.3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
jax = "^0.3.13"
jaxlib = "^0.3.10"
optax = "^0.1.2"
dm-haiku = "^0.0.6"
tensorflow = "^2.9.1"
tensorflow-datasets = "^4.6.0"
flax = "^0.5.2"
mkdocs-material = "^8.3.8"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
pymdown-extensions = "^9.5"
mkdocs = "^1.3.0"
scikit-learn = "^1.1.1"
pytest = "^7.1.2"
hydra-core = "^1.2.0"
Pillow = "^9.2.0"
tensorboard = "^2.9.1"
tensorboard-plugin-profile = "^2.8.0"
clu = "^0.0.7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
